@@ -1,36 +1,35 @@
 package org.schabi.newpipe.player.playqueue;
 
+import androidx.annotation.NonNull;
+
 import org.schabi.newpipe.extractor.stream.StreamInfo;
 import org.schabi.newpipe.extractor.stream.StreamInfoItem;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public final class SinglePlayQueue extends PlayQueue {
     public SinglePlayQueue(final StreamInfoItem item) {
-        super(0, Collections.singletonList(new PlayQueueItem(item)));
+        super(0, List.of(new PlayQueueItem(item)));
     }
 
     public SinglePlayQueue(final StreamInfo info) {
-        super(0, Collections.singletonList(new PlayQueueItem(info)));
+        super(0, List.of(new PlayQueueItem(info)));
     }
-
+    public SinglePlayQueue(final PlayQueueItem item) {
+        super(0, List.of(item));
+    }
     public SinglePlayQueue(final StreamInfo info, final long startPosition) {
-        super(0, Collections.singletonList(new PlayQueueItem(info)));
+        super(0, List.of(new PlayQueueItem(info)));
         getItem().setRecoveryPosition(startPosition);
     }
 
-    public SinglePlayQueue(final List<StreamInfoItem> items, final int index) {
+    public SinglePlayQueue(@NonNull final List<StreamInfoItem> items, final int index) {
         super(index, playQueueItemsOf(items));
     }
 
-    private static List<PlayQueueItem> playQueueItemsOf(final List<StreamInfoItem> items) {
-        final List<PlayQueueItem> playQueueItems = new ArrayList<>(items.size());
-        for (final StreamInfoItem item : items) {
-            playQueueItems.add(new PlayQueueItem(item));
-        }
-        return playQueueItems;
+    private static List<PlayQueueItem> playQueueItemsOf(@NonNull final List<StreamInfoItem> items) {
+        return items.stream().map(PlayQueueItem::new).collect(Collectors.toList());
     }
 
     @Override
@@ -40,5 +39,7 @@ public final class SinglePlayQueue extends PlayQueue {
 
     @Override
     public void fetch() {
+        // Item was already passed in constructor.
+        // No further items need to be fetched as this is a PlayQueue with only one item
     }
 }
